<resources>
    <string name="app_name">Sports App</string>d
    <string name="input_location_toolbar_title">New Location</string>
    <string name="input_location_name">Name</string>
    <string name="input_location_description">Description</string>
    <string name="input_location_location">GPS-Location</string>
    <string name="input_location_location_select">Select</string>
    <string name="input_location_kinds_of_sports">Kinds of sports</string>
    <string name="input_location_kinds_of_sports_hint">Write sports on seperate lines</string>
    <string name="input_location_submit">Add</string>
    <string name="event_list_toolbar_title">Events</string>
    <string name="event_creation_toolbar_title">New Event</string>
    <string name="event_edit_toolbar_title">Edit Event</string>
    <string name="input_event_title">Title</string>
    <string name="input_event_description">Description</string>
    <string name="input_event_number_of_people">Number of people</string>
    <string name="input_event_location">Location</string>
    <string name="input_event_location_label">No location selected</string>
    <string name="input_event_location_select">Select location</string>
    <string name="input_event_time_date_label">Time and Date</string>
    <string name="input_event_time">Set Time</string>
    <string name="input_event_time_label">No time set</string>
    <string name="input_event_time_placeholder">%1$s:%2$s</string>
    <string name="input_event_date">Set Date</string>
    <string name="input_event_date_label">No date set</string>
    <string name="input_event_date_placeholder">%1s.%2s.%3d</string>
    <string name="input_event_submit">Create event</string>
    <string name="edit_event_submit">Save Changes</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login_button">Login</string>
    <string name="login_no_account">No account? Register here</string>
    <string name="login_register_button">Register</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_password_repeat">Repeat Password</string>
    <string name="register_register_button">Register</string>
    <string name="event_list_item_location_list">Show Location List</string>
    <string name="event_list_created_by">Event created by</string>
    <string name="event_detail_comment">Comment</string>
    <string name="event_detail_edit">Edit</string>
    <string name="event_detail_join">Join</string>
    <string name="event_detail_location">Show on Map</string>
    <string name="event_detail_edit_not_admin">You can not edit this event. Please inform the admin of this event using the chat.</string>
    <string name="event_detail_join_admin">You are the admin of this event. You are already a member of this event.</string>
    <string name="event_detail_joined">You have joined this event</string>
    <string name="event_detail_left">You have left this event</string>
    <string name="event_detail_admin">Admin: %1s</string>
    <string name="event_detail_location_time">At: %1s, %2s</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="location_list_toolbar_title">Locations</string>
</resources>